[package]
name = "rainmeter"
version = "0.1.1"
edition = "2021"
authors = ["Tony Reeves <clownlaughatyou98@gmail.com>"]

[dependencies]
rocket_contrib = "0.4.10"
rocket = "0.4.10"
bcrypt = "0.13.0"
mysql = "22.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }